update android builds to SDK 29, use Java 11