@@ -295,7 +295,7 @@
                                 </goals>
                                 <configuration>
                                     <headerType>gui</headerType>
-                                    <outfile>${project.build.directory}/forge-java8.exe</outfile>
+                                    <outfile>${project.build.directory}/forge.exe</outfile>
                                     <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
                                     <dontWrapJar>true</dontWrapJar>
                                     <errTitle>forge</errTitle>
@@ -306,10 +306,32 @@
                                         <preCp>anything</preCp>
                                     </classPath>
                                     <jre>
-                                        <minVersion>1.8.0</minVersion>
+                                        <minVersion>11.0.1</minVersion>
+                                        <jdkPreference>jdkOnly</jdkPreference>
                                         <maxHeapSize>4096</maxHeapSize>
                                         <opts>
                                             <opt>-Dfile.encoding=UTF-8</opt>
+                                            <opt>--add-opens java.base/java.lang=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.math=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.nio=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.util=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.text=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/java.awt=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/java.awt.image=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/java.awt.color=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/javax.swing=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/javax.swing.border=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/javax.swing.event=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/sun.swing=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.desktop/java.beans=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</opt>
+                                            <opt>--add-opens java.base/java.net=ALL-UNNAMED</opt>
+                                            <opt>-Dio.netty.tryReflectionSetAccessible=true</opt>
                                         </opts>
                                     </jre>
                                     <versionInfo>
@@ -329,7 +351,7 @@
                                         </txtProductVersion>
                                         <productName>Forge</productName>
                                         <internalName>forge</internalName>
-                                        <originalFilename>forge-java8.exe</originalFilename>
+                                        <originalFilename>forge.exe</originalFilename>
                                     </versionInfo>
                                 </configuration>
                             </execution>
@@ -368,7 +390,6 @@
                                                 <include name="res/**" />
                                                 <exclude name="res/cardsfolder/**" />
                                             </fileset>
-                                            <fileset dir="${project.build.directory}" includes="forge-java8.exe" />
                                             <fileset dir="${project.build.directory}" includes="forge.exe" />
                                             <fileset dir="${project.build.directory}" includes="${project.build.finalName}-jar-with-dependencies.jar" />
                                         </copy>
@@ -377,7 +398,6 @@
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge.sh" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge.command" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge.cmd" perm="a+rx" />
-                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge-java8.exe" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge.exe" perm="a+rx" />
                                         <tar destfile="${project.build.directory}/${project.build.finalName}.tar.bz2" compression="bzip2">
                                             <tarfileset filemode="755" dir="${project.build.directory}/${project.build.finalName}">
@@ -454,53 +474,6 @@
                         <executions>
                             <execution>
                                 <id>l4j-gui</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>launch4j</goal>
-                                </goals>
-                                <configuration>
-                                    <headerType>gui</headerType>
-                                    <outfile>${project.build.directory}/forge-java8.exe</outfile>
-                                    <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
-                                    <dontWrapJar>true</dontWrapJar>
-                                    <errTitle>forge</errTitle>
-                                    <icon>src/main/config/forge.ico</icon>
-                                    <classPath>
-                                        <mainClass>forge.view.Main</mainClass>
-                                        <addDependencies>false</addDependencies>
-                                        <preCp>anything</preCp>
-                                    </classPath>
-                                    <jre>
-                                        <minVersion>1.8.0</minVersion>
-                                        <maxHeapSize>4096</maxHeapSize>
-                                        <opts>
-                                            <opt>-Dfile.encoding=UTF-8</opt>
-                                        </opts>
-                                    </jre>
-                                    <versionInfo>
-                                        <fileVersion>
-                                            ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.0
-                                        </fileVersion>
-                                        <txtFileVersion>
-                                            ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.0
-                                        </txtFileVersion>
-                                        <fileDescription>Forge</fileDescription>
-                                        <copyright>Forge</copyright>
-                                        <productVersion>
-                                            ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.0
-                                        </productVersion>
-                                        <txtProductVersion>
-                                            ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.0
-                                        </txtProductVersion>
-                                        <productName>Forge</productName>
-                                        <internalName>forge</internalName>
-                                        <originalFilename>forge-java8.exe</originalFilename>
-                                    </versionInfo>
-                                </configuration>
-                            </execution>
-                            <!--extra-->
-                            <execution>
-                                <id>l4j-gui2</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>launch4j</goal>
@@ -608,17 +581,14 @@
                                                 <include name="res/**" />
                                                 <exclude name="res/cardsfolder/**" />
                                             </fileset>
-                                            <fileset dir="${project.build.directory}" includes="forge-java8.exe" />
                                             <fileset dir="${project.build.directory}" includes="forge.exe" />
                                             <fileset dir="${project.build.directory}" includes="${project.build.finalName}-jar-with-dependencies.jar" />
                                             <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-adventure.exe" />
-                                            <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-adventure-java8.exe" />
                                             <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-adventure.sh" />
                                             <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-adventure.command" />
                                             <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-adventure.cmd" />
                                             <fileset dir="${project.build.directory}/../../forge-gui-mobile-dev/target" includes="forge-gui-mobile-dev-${project.version}-jar-with-dependencies.jar" />
                                             <fileset dir="${project.build.directory}/../../forge-adventure/target" includes="forge-adventure-editor.exe" />
-                                            <fileset dir="${project.build.directory}/../../forge-adventure/target" includes="forge-adventure-editor-java8.exe" />
                                             <fileset dir="${project.build.directory}/../../forge-adventure/target" includes="forge-adventure-editor.sh" />
                                             <fileset dir="${project.build.directory}/../../forge-adventure/target" includes="forge-adventure-editor.command" />
                                             <fileset dir="${project.build.directory}/../../forge-adventure/target" includes="forge-adventure-editor.cmd" />
@@ -635,10 +605,8 @@
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-editor.sh" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-editor.command" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-editor.cmd" perm="a+rx" />
-                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge-java8.exe" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge.exe" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure.exe" perm="a+rx" />
-                                        <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-java8.exe" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-editor.exe" perm="a+rx" />
                                         <chmod file="${project.build.directory}/${project.build.finalName}/forge-adventure-editor-java8.exe" perm="a+rx" />
                                         <tar destfile="${project.build.directory}/${project.build.finalName}.tar.bz2" compression="bzip2">
@@ -646,17 +614,14 @@
                                                 <include name="forge.sh" />
                                                 <include name="forge.command" />
                                                 <include name="forge.cmd" />
-                                                <include name="forge-java8.exe" />
                                                 <include name="forge.exe" />
                                                 <include name="forge-adventure.sh" />
                                                 <include name="forge-adventure.command" />
                                                 <include name="forge-adventure.cmd" />
-                                                <include name="forge-adventure-java8.exe" />
                                                 <include name="forge-adventure.exe" />
                                                 <include name="forge-adventure-editor.sh" />
                                                 <include name="forge-adventure-editor.command" />
                                                 <include name="forge-adventure-editor.cmd" />
-                                                <include name="forge-adventure-editor-java8.exe" />
                                                 <include name="forge-adventure-editor.exe" />
                                             </tarfileset>
                                             <tarfileset dir="${project.build.directory}/${project.build.finalName}">
@@ -664,17 +629,14 @@
                                                 <exclude name="forge.sh" />
                                                 <exclude name="forge.command" />
                                                 <exclude name="forge.cmd" />
-                                                <exclude name="forge-java8.exe" />
                                                 <exclude name="forge.exe" />
                                                 <exclude name="forge-adventure.sh" />
                                                 <exclude name="forge-adventure.command" />
                                                 <exclude name="forge-adventure.cmd" />
-                                                <exclude name="forge-adventure-java8.exe" />
                                                 <exclude name="forge-adventure.exe" />
                                                 <exclude name="forge-adventure-editor.sh" />
                                                 <exclude name="forge-adventure-editor.command" />
                                                 <exclude name="forge-adventure-editor.cmd" />
-                                                <exclude name="forge-adventure-editor-java8.exe" />
                                                 <exclude name="forge-adventure-editor.exe" />
                                             </tarfileset>
                                         </tar>
